fix border spacing

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -141,7 +141,7 @@ optgroup {
 }
 table {
     border-collapse: separate;
-    border-spacing: 150px 0px;
+    border-spacing: 130px 0px;
 }
 td, th {
     padding: 0;
